<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        layout="@layout/toolbar"
        android:id="@+id/toolbar">
    </include>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/user_layout"
        android:layout_width="match_parent"
        android:layout_height="178dp"
        android:orientation="vertical"
        android:background="?attr/colorPrimary"
        android:layout_below="@id/toolbar">

        <ImageView
            android:id="@+id/profileImageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/cook_white_grey100"
            android:layout_gravity="center"
            android:layout_marginTop="5dp" />

    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/profil_edit_old_password_TextInputLayout">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/profil_edit_old_password_editText"
            android:hint="@string/hint_old_password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/profil_edit_new_password_TextInputLayout">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/profil_edit_new_password_editText"
            android:hint="@string/hint_new_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/colorAccent"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:text="@string/btn_save"
        />

</LinearLayout>