<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        layout="@layout/toolbar"
        android:id="@+id/toolbar">
    </include>


    <ImageView
        android:id="@+id/login_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/cook_white_grey100"
        android:layout_below="@+id/toolbar"/>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_email_TextInputLayout"
        android:layout_below="@+id/login_image">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login_email_editText"
            android:hint="@string/hint_email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_password_TextInputLayout"
        android:layout_below="@+id/login_email_TextInputLayout">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login_password_editText"
            android:hint="@string/hint_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_login"
        android:background="?attr/colorAccent"
        android:layout_below="@+id/login_password_TextInputLayout"
        android:layout_alignParentEnd="true"
        />
    <TextView
        android:id="@+id/no_account_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_account_txt"
        android:layout_marginStart="5dp"
        android:layout_below="@+id/login_password_TextInputLayout"/>

    <Button
        android:id="@+id/signup_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_signup"
        android:textSize="11sp"
        android:layout_marginStart="5dp"
        android:background="?attr/colorPrimary"
        android:layout_below="@+id/no_account_txt"
        android:layout_alignParentStart="true"
        />

</RelativeLayout>