<resources>
    <string name="app_name">  My cookbook</string>
    <string name="recipes_list">Spis treści</string>
    <string name="category">Kategoria</string>
    <string name="menuitem_detail_menu">Menu</string>
    <string name="menuitem_recipes_search">Szukaj</string>
    <string name="memnutitem_icon">Ikona</string>


    <string name="menu_item_add_recipe">Dodaj przepis</string>
    <string name="menu_item_add_category">Dodaj kategorię</string>
    <string name="menu_item_add_photo">Dodaj zdjęcie</string>
    <string name="menu_item_add_ingredient">Dodaj składnik</string>
    <string name="menu_item_remove_recipe">Usuń przepis</string>
    <string name="menu_item_remove_category">Usuń kategorię</string>
    <string name="menu_item_remove_photo">Usuń zdjęcie</string>
    <string name="menu_item_remove_ingredient">Usuń składnik</string>
    <string name="menu_item_share">Udostępnij</string>
    <string name="menu_item_edit">Edytuj</string>
    <string name="menu_item_save">Zapisz</string>

    <string name="category_name">Nazwa kategorii</string>

    <string name="recipe_title">Tytuł</string>
    <string name="recipe_detail_description">Sposób przygotowania</string>
    <string name="recipe_detail_ingredients">Składniki</string>
    <string name="recipe_detail_note">Notatka</string>
    <string name="recipe_detail_category">Kategoria</string>
    <string name="recipe_detail_time">Czas w minutach</string>
    <string name="recipe_detail_portions">Porcje</string>
    <string name="ingredient_name">Nazwa składnika</string>
    <string name="new_ingredient_title">Nowy składnik</string>
    <string name="edit_igredient_title">Edytuj składnik</string>
    <string name="edit_shoppinglist_title">Edytuj listę zakupów</string>
    <string name="ingredient">Składniki</string>
    <string name="ingredient_measure">miara</string>
    <string name="ingredient_quantity">ilość</string>
    <string name="category_icon">Ikona kategorii</string>
    <string name="open_drawer">Otwórz szufladę</string>
    <string name="close_drawer">Zamknij szufladę</string>
    <string name="drawer_item_profile">Profil</string>
    <string name="drawer_item_recipes">Przepisy</string>
    <string name="drawer_item_shopping_lists">Listy zakupów</string>
    <string name="drawer_item_weight_counter">Przelicznik miar i wag</string>
    <string name="drawer_item_timer">Minutnik</string>
    <string name="drawer_item_video">Filmy</string>
    <string name="drawer_item_sync">Synchronizacja</string>
    <string name="drawer_item_options">Ustawienia</string>
    <string name="menu_item_add_shoppinglist">Dodaj listę zakupów</string>
    <string name="measure">miara</string>
    <string name="quantity">0,0</string>
    <string name="doc_time">Czas przygotowania:</string>
    <string name="doc_portion">Porcje:</string>
    <string name="doc_ingredients">Składniki:</string>
    <string name="doc_description">Przygotowanie:</string>
    <string name="doc_note">Notatka:</string>

    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Hasło</string>
    <string name="hint_name">Nazwa użytkownika</string>
    <string name="btn_login">ZALOGUJ</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="btn_signup">Rejestracja</string>
    <string name="action_logout">Wyloguj</string>
    <string name="action_signout">Usuń konto</string>
    <string name="btn_save">Zapisz</string>
    <string name="hint_old_password">Stare hasło</string>
    <string name="hint_new_password">Nowe hasło</string>
    <string name="btn_sync">Synchronizuj</string>
    <string name="text_sync">Zalogowany użytkownik może umieścić swoje przepisy w chmurze, aby mieć do nich dostęp z wielu urządzeń z zainstalowaną aplikacją.</string>
    <string name="menu_item_import_recipe_from_website">Importuj przepis ze strony</string>
    <string name="btn_choose_image">Wybierz to zdjęcie</string>
    <string name="new_shoppinglist_title">Nowa lista zakupów</string>
    <string name="menu_item_download_recipe">Pobierz przepis</string>
    <string name="menu_item_generate_shoppinglist">Generuj listę zakupów</string>
    <string name="menu_item_remove_shoppinglist">Usuń listę</string>
    <string name="menu_item_edit_shoppinglist">Zmień nazwę</string>
    <string name="to_buy">Do kupienia:</string>
    <string name="btn_time_start">Start</string>
    <string name="btn_time_stop">Stop</string>
    <string name="btn_time_pause">Pauza</string>
    <string name="timer_title">Minutnik</string>
    <string name="product_title">Wybierz produkt</string>
    <string name="spoon_value">łyżka - 15ml</string>
    <string name="glass_value">szklanka - 250ml</string>

    <string name="title_activity_settings">Settings</string>

   <!--Preferences strings-->
    <string name="key_alarm_sound">key_alarm_sound</string>
    <string name="title_alarm_sound">Dźwięk</string>
    <string name="summary_alarm_sound">Włącz dźwięk alarmu</string>
    <string name="key_vibrate">key_vibrate</string>
    <string name="title_vibrate">Wibracje</string>
    <string name="summary_vibrate">Włącz wibracje</string>
    <string name="key_notification_actionbar">key_notification_actionbar</string>
    <string name="summary_notification_actionbar">Włącz powiadomienia na pasku statusu</string>
    <string name="title_notification_actionbar">Pasek statusu</string>
    <string name="title_appearance_color">Kolorystyka</string>
    <string name="key_appearance_color">key_appearance_color</string>
    <string name="summary_appearance_color">Wybierz kolorystykę aplikacji</string>
    <string name="title_gender">Awatar</string>
    <string name="key_gender">key_gender</string>
    <string name="summary_gender">Wybierz płeć w celu zmiany awatara.</string>
    <string name="key_sync">key_sync</string>
    <string name="summary_sync">Pozwól na synchronizację domyślną</string>
    <string name="title_sync">Domyślna synchronizacja</string>
    <string name="summary_about">Aplikacja stworzona na potrzeby własne i innych. Ułatwia kolekcjonowanie przepisów kulinarnych oraz oferuje się jako pomocnik kuchenny.</string>
    <string name="title_version">Wersja</string>
    <string name="app_version">1.0.0</string>
    <string name="recipe_detail_movie_url">Link do filmu</string>
    <string name="filter_title">Filtruj:</string>
    <string name="btn_time">Po czasie</string>
    <string name="btn_name">Po nazwie</string>
    <string name="btn_category">Po kategorii</string>
    <string name="recipe_search_hint">nazwa, składniki</string>
    <string name="shoppinglist_title">Tytuł listy</string>
    <string name="no_account_txt">Nie masz konta?</string>


</resources>
